UI reports dev 23

--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -757,11 +757,11 @@
       <div class=" p-3 pb-0">
         <div class="row">
         <div class="col-md-3">
-        <h4 class="">Reports | Portage Bill :</h4>
+        <h4 class="pt-1">Reports | Portage Bill :</h4>
         </div>
         <div class="col">
         <div class="dropdown mb-3">
-          <button class="btn btn-primary w-100 dropdown-toggle p-0 ps-2 pe-2" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-primary w-100 dropdown-toggle pt-1 pb-1 ps-2 pe-2 rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Select a Report
           </button>
           <ul class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
