--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -556,9 +556,9 @@
           <tr>
             <th>Description</th>
             <th>Status</th>
-            <th>Query File</th>
-            <th>Query File Link</th>
-            <th>Created By</th>
+            <th>Query&nbsp;File</th>
+            <th>Query&nbsp;File&nbsp;Link</th>
+            <th>Created&nbsp;By</th>
             <th>Reply</th>
             <th>Action</th>
           </tr>
