--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -551,7 +551,7 @@
     <div class="card p-3 mb-3">
       <h4 class="text-primary pt-2">All Queries</h4>
 
-      <table class="table table-bordered">
+      <table class="table table-bordered table-sm">
         <thead>
           <tr>
             <th>Description</th>
