--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -887,7 +887,7 @@
                   <div>
                  
 
-                    <div class=" rounded-3 card p-3 mt-2 bg-body-tertiary">
+                    <div class=" rounded-3 card p-3 mt-2 bg-white">
                       <div class="d-flex justify-content-between">
                             <div class="skeleton-loading">
                         <div class="skeleton"></div>
