--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -270,7 +270,11 @@
         }
       }
     }
-
+    .list-group-item:hover {
+            background-color: #f0f0f0;
+            transform: scale(1.02);
+            transition: transform 0.2s;
+        }
 
   </style>
   <!-- Icons. Uncomment required icon fonts -->
