vendor dashboard implemented

--- a/views/public/html/vendor-add-candidate.html
+++ b/views/public/html/vendor-add-candidate.html
@@ -235,12 +235,7 @@
                     <li>
                       <div class="dropdown-divider"></div>
                     </li>
-                    <li>
-                      <a class="dropdown-item" href="./profile.html">
-                        <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
-                      </a>
-                    </li>
+                
                      
                       <div class="dropdown-divider"></div>
                     </li>
@@ -278,7 +273,7 @@
                                         <i class="bx bx-dots-vertical-rounded"></i>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end">
-                                        <li><a class="dropdown-item" href="./edit-candidate.html">View (Edit/Delete)</a></li>
+                                        <li><a class="dropdown-item" href="./vendor-view-candidate.html">View (Edit/Delete)</a></li>
                                         <!-- Add more dropdown items if needed -->
                                     </ul>
                                 </div>
