--- a/views/public/html/vendor-add-contract.html
+++ b/views/public/html/vendor-add-contract.html
@@ -106,7 +106,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
          <div class="app-brand demo  mt-0 " style="background-color: #008E9C;padding-top: 70px;padding-bottom: 50px;">
-            <a href="indexpage.html" class="app-brand-link">
+            <a href="vendorhomepage.html" class="app-brand-link">
               <span class="app-brand-logo demo mb-3 ">
 
                 <svg xmlns="http://www.w3.org/2000/svg" width="383.146" height="163.169" viewBox="0 0 383.146 163.169">
@@ -237,12 +237,7 @@
                     <li>
                       <div class="dropdown-divider"></div>
                     </li>
-                    <li>
-                      <a class="dropdown-item" href="./profile.html">
-                        <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
-                      </a>
-                    </li>
+                  
                      
                       <div class="dropdown-divider"></div>
                     </li>
@@ -265,32 +260,7 @@
           <div class="container-fluid ">
 
             <div class="content-wrapper mt-3 rounded-3">
-              <div class=" mt-0">
-                <div class="col-lg-3 ">
-                    <div class="btn-group">
-                        <button
-                            type="button"
-                            class="btn btn-primary dropdown-toggle hide-arrow"
-                            data-bs-toggle="dropdown"
-                            aria-expanded="false"
-                            
-                        >
-                            ≡ EDIT CANDIDATE</i>
-                        </button>
-                        <ul class="dropdown-menu" >
-                            <li><a class="dropdown-item" id="personal" >> PERSONAL</a></li>
-                            <li><a class="dropdown-item" id="discussion" >> DISCUSSION</a></li>
-                            <li><a class="dropdown-item" id="contract">> CONTRACT</a></li>
-                            <li><a class="dropdown-item" id="document">> DOCUMENT</a></li>
-                            <li><a class="dropdown-item" id="bank">> BANK</a></li>
-                            <li><a class="dropdown-item" id="travel">> TRAVEL</a></li>
-                            <li><a class="dropdown-item" id="medicals">> MEDICALS</a></li>
-                            <li><a class="dropdown-item" id="nkd">> NKD</a></li>
-                            <li><a class="dropdown-item" id="seaservice">> SEASERVICE</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+          
                 <div class="w-100 mt-1">
                   <div class="d-flex justify-content-end">
                 </div>
