--- a/views/public/html/vendorviewcandidate.html
+++ b/views/public/html/vendorviewcandidate.html
@@ -678,10 +678,13 @@
                     
                                 <!-- Document Content -->
                                 <div id="documentContent" style="display: none;">
+                                  <a id="addDocumentButton" href="#" class="btn btn-danger p-1 ps-2 pe-2 mb-3 float-end me-3">Add New Document</a>
+
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
+                                    
                                     <div class="w-100 ">
                                         <div class="">
-                                         
+
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Document table</h4>
                                 
                                             <div class="table-responsive text-center">
