--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -478,12 +478,12 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="add-company.html" class="menu-link">
+                  <a href="add-grade.html" class="menu-link">
                     <div data-i18n="Account">Add</div>
                   </a>
                 </span>
                 <li class="menu-item">
-                  <a href="view-company.html" class="menu-link">
+                  <a href="edit-grade.html" class="menu-link">
                     <div data-i18n="Account">List</div>
                   </a>
                 </span>
