--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -909,6 +909,10 @@
                       <input class="form-check-input" type="checkbox" id="boiler_suit_size" name="boiler_suit_size">
                       <label class="form-check-label" for="boiler_suit_size">Boiler Suit Size</label>
                     </div>
+                    <div class="form-check me-3">
+                      <input class="form-check-input" type="checkbox" id="userId" name="userId">
+                      <label class="form-check-label" for="userId">User ID</label>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -926,7 +930,7 @@
           <div class=" rounded-3 bg-white p-3 mt-2">
             <div class="row mb-2">
               <div class="col-md-3">
-              <input type="text" id="searchInput" class="form-control" style="height: 25px;" placeholder="Search...">
+              <input type="text" id="searchInput1" class="form-control" style="height: 25px;" placeholder="Search...">
               </div>
               <div class="col-md-1">
               <select id="rowsPerPage" class="form-select" style="height: 25px; padding: 0%; padding-left: 10px;">
