--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -796,7 +796,7 @@
             
             <div class=""> 
               <div class=" p-2 ps-2 pe-4">
-                <span><a class="me-2" href="./daily.html">Dashboard</a></span>
+                <span><a class="me-2" href="./daily.html">Daily&nbsp;Dashboard</a></span>
 
                                         <span style="border-left: solid 0.5px lightgray;"></span>
 
