--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -754,6 +754,8 @@ SIRE/CID experience
                   <span>YES</span>
                   <input type="checkbox" class="form-checkbox" id="privacyNo"/>
                   <span>NO</span>
+                  <input type="checkbox" class="form-checkbox" id="privacyInappl"/>
+                  <span>INAPPLICABLE</span>
                 </div>
               </div>
 
@@ -1046,7 +1048,14 @@ SIRE/CID experience
 
             function fetchValues() {
                 const ids = [
-                'fullName','rankApplied','nationality','telephone','othersTAE','mobile','qualification','lastContract','englishGood','englishSatisf','englishPoor','vessel1','europe','usa','medSea','farEast','pgGoa','crewExperienceYes','crewExperienceNo','nationality1','cargosHandled','automation','ceInput1','ceInput2','ceInput3','ceInput4','ceInput5','ceInput6','pumps','gears','drinkingYes','drinkingNo','medicalYes','medicalNo','contractsNo','vesselServed','lastContractsignOff','mainExp','auxExp','cargoCranes','cargoCarried','cargoPumps','tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo','ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo','bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo','pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes','expNo','distressYes','distressNo','dryYes','dryNo','privacyYes','privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo','auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo','cmsYes','cmsNo','mandatYes','mandatNo','riverYes','riverNo','reasonForLeaving','intComments','accepted','rejected','grading','intName','signature','dateNow'
+                'fullName','rankApplied','nationality','telephone','othersTAE','mobile'
+                ,'qualification','lastContract','englishGood','englishSatisf','englishPoor',
+                'vessel1','europe','usa','medSea','farEast','pgGoa','crewExperienceYes',
+                'crewExperienceNo','nationality1','cargosHandled','automation','ceInput1',
+                'ceInput2','ceInput3','ceInput4','ceInput5','ceInput6','pumps','gears',
+                'drinkingYes','drinkingNo','medicalYes','medicalNo','contractsNo',
+                'vesselServed','lastContractsignOff','mainExp','auxExp','cargoCranes',
+                'cargoCarried','cargoPumps','tradingArea','mixedCrew','ecdis','psc','sire','sseYes','sseNo','ecdisYes','ecdisNo','anchorYes','anchorNo','deckYes','deckNo','bridgeYes','bridgeNo','ballastYes','ballastNo','mlcYes','mlcNo','pmsYes','pmsNo','lsaYes','lsaNo','extraYes','extraNo','expYes','expNo','distressYes','distressNo','dryYes','dryNo','privacyYes','privacyNo','tugsYes','tugsNo','gmoYes','gmoNo','ecaYes','ecaNo','auditsYes','auditsNo','awareYes','awareNo','yardYes','yardNo','cmsYes','cmsNo','mandatYes','mandatNo','riverYes','riverNo','reasonForLeaving','intComments','accepted','rejected','grading','intName','signature','dateNow'
                 ];
 
                 const evalObject = {};
