--- a/views/public/html/add-userdata.html
+++ b/views/public/html/add-userdata.html
@@ -786,6 +786,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row mb-3">
+                      <div class="col-6">
+                          <label class="form-check-label" for="u_interviewer">Interviewer</label>
+                      </div>
+                      <div class="col-6">
+                          <div class="form-check">
+                              <input type="checkbox" id="u_interviewer" name="u_interviewer" class="form-check-input">
+                          </div>
+                      </div>
+                  </div>
                     </div>
                 </div>
                 <div class="card-footer text-end pt-0 pe-0 pb-1">
