--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -20,8 +20,29 @@
     <title>Manage Candidate | Nsnemo</title>
 
     <meta name="description" content="" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+
+    <!-- jQuery (required for Select2) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <style>
+        .select2{
+        width:100% !important; 
+      }
+
+      .select2-container--default .select2-selection--single {
+  height: 57px; /* Adjust this height based on your native select element */
+  line-height: 57px; /* Adjust this line-height to match the text vertically in the middle */
+  border-radius: .25rem; /* Adjust border radius if needed */
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 57px; /* Adjust this if needed */
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+  height: 57px; /* Adjust this to match the height */
+}
       .loader {
         --r1: 154%;
         --r2: 68.5%;
@@ -672,10 +693,10 @@
                           <div class="col-md-6">
                             <div class="form-floating">
                               <select id="edit_candidate_c_rank" class="form-select" >
-                                  <option value="" disabled selected>-- Select Rank --</option>
+                                  <option value="" disabled selected></option>
                                   <!-- Options will be dynamically added using JavaScript -->
                               </select>
-                                <label for="edit_candidate_c_rank">Rank</label>
+                                <label for="edit_candidate_c_rank"></label>
                             </div>
                         </div>
                             <div class="col-md-6">
@@ -700,10 +721,10 @@
                           <div class="col-md-6">
                             <div class="form-floating">
                                 <select id="edit_candidate_nationality" class="form-select" >
-                                    <option value="" disabled selected>-- Select Nationality --</option>
+                                    <option value="" disabled selected></option>
                                     <!-- Options will be dynamically added using JavaScript -->
                                 </select>
-                                <label for="edit_candidate_nationality">Nationality</label>
+                                <label for="edit_candidate_nationality"></label>
                             </div>
                         </div>
                         
@@ -783,10 +804,10 @@
                             <div class="col-md-6">
                               <div class="form-floating">
                                   <select id="edit_candidate_c_vessel" class="form-select" >
-                                      <option value="" disabled selected>-- Select Vessel Type --</option>
+                                      <option value="" disabled selected></option>
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
-                                  <label for="edit_candidate_c_vessel">Vessel Type</label>
+                                  <label for="edit_candidate_c_vessel"></label>
                               </div>
                           </div>
                           
@@ -831,10 +852,10 @@
                           <div class="col-md-6">
                             <div class="form-floating">
                                 <select id="edit_candidate_grade" class="form-select" >
-                                    <option value="" disabled selected>-- Select Grade --</option>
+                                    <option value="" disabled selected></option>
                                     <!-- Options will be dynamically added using JavaScript -->
                                 </select>
-                                <label for="edit_candidate_grade">Grade</label>
+                                <label for="edit_candidate_grade"></label>
                             </div>
                         </div>
                         
@@ -904,10 +925,10 @@
                             <div class="col-md-6">
                               <div class="form-floating">
                                   <select id="edit_candidate_I_country" class="form-select" >
-                                      <option value="" disabled selected>-- Select License Country --</option>
+                                      <option value="" disabled selected></option>
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
-                                  <label for="edit_candidate_I_country">License Country</label>
+                                  <label for="edit_candidate_I_country"></label>
                               </div>
                           </div>
                           
@@ -1391,7 +1412,43 @@
     <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
 
     <script src="../assets/vendor/js/menu.js"></script>
-    <!-- endbuild -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script>
+    $("#edit_candidate_c_rank").select2({
+            placeholder: "Select a Rank",
+            allowClear: true
+        });
+        $("#edit_candidate_nationality").select2({
+            placeholder: "Select Nationality",
+            allowClear: true
+        });
+        $("#edit_candidate_c_vessel").select2({
+            placeholder: "Select Vessel",
+            allowClear: true
+        });
+        $("#edit_candidate_grade").select2({
+            placeholder: "Select Grade",
+            allowClear: true
+        });
+        $("#edit_candidate_I_country").select2({
+            placeholder: "Select License Country",
+            allowClear: true
+        });
+
+        
+        
+        
+        
+        
+       
+
+        function showReport(reportId) {
+          $('.report-content').hide(); // Hide all report contents
+          $('#' + reportId + 'Content').show(); // Show the selected report content
+        }
+      </script>
+    <!-- Vendors -->
 
     <!-- Vendors JS -->
 
