--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -795,6 +795,10 @@
                       <input type="checkbox" id="u_staff" name="u_staff" class="form-check-input">
                       <label class="form-check-label" style="font-size: 12px;" for="u_staff">Staff</label>
                   </div>
+                  <div class="col-md-3 form-check">
+                    <input type="checkbox" id="u_interviewer" name="u_interviewer" class="form-check-input">
+                    <label class="form-check-label" style="font-size: 12px;" for="u_interviewer">Interviewer</label>
+                </div>
                       </div>
                   </div>
               
