interviewer permission update done

--- a/views/public/html/add-userdata.html
+++ b/views/public/html/add-userdata.html
@@ -788,11 +788,11 @@
                     </div>
                     <div class="row mb-3">
                       <div class="col-6">
-                          <label class="form-check-label" for="u_interviewer">Interviewer</label>
+                          <label class="form-check-label" for="interviewer">Interviewer</label>
                       </div>
                       <div class="col-6">
                           <div class="form-check">
-                              <input type="checkbox" id="u_interviewer" name="u_interviewer" class="form-check-input">
+                              <input type="checkbox" id="interviewer" name="interviewer" class="form-check-input">
                           </div>
                       </div>
                   </div>
