--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -796,8 +796,8 @@
                       <label class="form-check-label" style="font-size: 12px;" for="u_staff">Staff</label>
                   </div>
                   <div class="col-md-3 form-check">
-                    <input type="checkbox" id="u_interviewer" name="u_interviewer" class="form-check-input">
-                    <label class="form-check-label" style="font-size: 12px;" for="u_interviewer">Interviewer</label>
+                    <input type="checkbox" id="interviewer" name="interviewer" class="form-check-input">
+                    <label class="form-check-label" style="font-size: 12px;" for="interviewer">Interviewer</label>
                 </div>
                       </div>
                   </div>
